# chloe_digital_universal_analytics

./: .gitignore  Pipfile  README.md  broadcast.py  broadcaster.py  helper.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py
.github/workflows/: main.yaml
schemas/: Acquisitions.json  Ages.json  Demographics.json  Events.json
templates/: create_union_all.sql.j2
test/: test_broadcast.py  test_units.py  utils.py
tests/: test_units.py
